--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,14 @@ html, body {
     font-family: 'Open Sans', Arial, sans-serif;
     line-height: 1.5;
 }
+
+#navbar {
+    position: fixed;
+    min-width: 290px;
+    top: 0px;
+    left: 0px;
+    width: 300px;
+    height: 100%;
+    border-right: solid;
+    border-color: rgba(0, 22, 22, 0.4);
+}
